# version_controller

./: .gitignore  CLI.md  README.md  pyproject.toml
src/version_controller/: __init__.py  _config.py  cli.py  controller.py
src/version_controller/backends/: __init__.py  git_backend.py  sapling_backend.py
src/version_controller/config/: controller_config.toml
src/version_controller/core/: __init__.py  context_rebuilder.py  execution_chain.py  rollback.py  snapshot.py  validator.py  workspace_manager.py
src/version_controller/logs/: __init__.py  parser.py  serializer.py
src/version_controller/metadata/: __init__.py  csv_logger.py  metadata_branch.py
src/version_controller/utils/: __init__.py  file_ops.py  hashing.py  id_generator.py
